MGMT-1793 Rename functions to specify the discovery ignition
This will differentiate these functions and parameters from the
ones we will use to edit the later ignition files for MGMT-1989
