# restapi/operations/assisted_install_api.go
@@ -88,14 +88,14 @@ func NewAssistedInstallAPI(spec *loads.Document) *AssistedInstallAPI {
 		InstallerGetClusterHandler: installer.GetClusterHandlerFunc(func(params installer.GetClusterParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.GetCluster has not yet been implemented")
 		}),
-		InstallerGetClusterIgnitionConfigHandler: installer.GetClusterIgnitionConfigHandlerFunc(func(params installer.GetClusterIgnitionConfigParams, principal interface{}) middleware.Responder {
-			return middleware.NotImplemented("operation installer.GetClusterIgnitionConfig has not yet been implemented")
-		}),
 		InstallerGetClusterInstallConfigHandler: installer.GetClusterInstallConfigHandlerFunc(func(params installer.GetClusterInstallConfigParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.GetClusterInstallConfig has not yet been implemented")
 		}),
 		InstallerGetCredentialsHandler: installer.GetCredentialsHandlerFunc(func(params installer.GetCredentialsParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.GetCredentials has not yet been implemented")
+		}),
+		InstallerGetDiscoveryIgnitionHandler: installer.GetDiscoveryIgnitionHandlerFunc(func(params installer.GetDiscoveryIgnitionParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation installer.GetDiscoveryIgnition has not yet been implemented")
 		}),
 		InstallerGetFreeAddressesHandler: installer.GetFreeAddressesHandlerFunc(func(params installer.GetFreeAddressesParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.GetFreeAddresses has not yet been implemented")
@@ -145,11 +145,11 @@ func NewAssistedInstallAPI(spec *loads.Document) *AssistedInstallAPI {
 		InstallerUpdateClusterHandler: installer.UpdateClusterHandlerFunc(func(params installer.UpdateClusterParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.UpdateCluster has not yet been implemented")
 		}),
-		InstallerUpdateClusterIgnitionConfigHandler: installer.UpdateClusterIgnitionConfigHandlerFunc(func(params installer.UpdateClusterIgnitionConfigParams, principal interface{}) middleware.Responder {
-			return middleware.NotImplemented("operation installer.UpdateClusterIgnitionConfig has not yet been implemented")
-		}),
 		InstallerUpdateClusterInstallConfigHandler: installer.UpdateClusterInstallConfigHandlerFunc(func(params installer.UpdateClusterInstallConfigParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.UpdateClusterInstallConfig has not yet been implemented")
+		}),
+		InstallerUpdateDiscoveryIgnitionHandler: installer.UpdateDiscoveryIgnitionHandlerFunc(func(params installer.UpdateDiscoveryIgnitionParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation installer.UpdateDiscoveryIgnition has not yet been implemented")
 		}),
 		InstallerUpdateHostInstallProgressHandler: installer.UpdateHostInstallProgressHandlerFunc(func(params installer.UpdateHostInstallProgressParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.UpdateHostInstallProgress has not yet been implemented")
@@ -248,12 +248,12 @@ type AssistedInstallAPI struct {
 	InstallerGenerateClusterISOHandler installer.GenerateClusterISOHandler
 	// InstallerGetClusterHandler sets the operation handler for the get cluster operation
 	InstallerGetClusterHandler installer.GetClusterHandler
-	// InstallerGetClusterIgnitionConfigHandler sets the operation handler for the get cluster ignition config operation
-	InstallerGetClusterIgnitionConfigHandler installer.GetClusterIgnitionConfigHandler
 	// InstallerGetClusterInstallConfigHandler sets the operation handler for the get cluster install config operation
 	InstallerGetClusterInstallConfigHandler installer.GetClusterInstallConfigHandler
 	// InstallerGetCredentialsHandler sets the operation handler for the get credentials operation
 	InstallerGetCredentialsHandler installer.GetCredentialsHandler
+	// InstallerGetDiscoveryIgnitionHandler sets the operation handler for the get discovery ignition operation
+	InstallerGetDiscoveryIgnitionHandler installer.GetDiscoveryIgnitionHandler
 	// InstallerGetFreeAddressesHandler sets the operation handler for the get free addresses operation
 	InstallerGetFreeAddressesHandler installer.GetFreeAddressesHandler
 	// InstallerGetHostHandler sets the operation handler for the get host operation
@@ -286,10 +286,10 @@ type AssistedInstallAPI struct {
 	InstallerResetClusterHandler installer.ResetClusterHandler
 	// InstallerUpdateClusterHandler sets the operation handler for the update cluster operation
 	InstallerUpdateClusterHandler installer.UpdateClusterHandler
-	// InstallerUpdateClusterIgnitionConfigHandler sets the operation handler for the update cluster ignition config operation
-	InstallerUpdateClusterIgnitionConfigHandler installer.UpdateClusterIgnitionConfigHandler
 	// InstallerUpdateClusterInstallConfigHandler sets the operation handler for the update cluster install config operation
 	InstallerUpdateClusterInstallConfigHandler installer.UpdateClusterInstallConfigHandler
+	// InstallerUpdateDiscoveryIgnitionHandler sets the operation handler for the update discovery ignition operation
+	InstallerUpdateDiscoveryIgnitionHandler installer.UpdateDiscoveryIgnitionHandler
 	// InstallerUpdateHostInstallProgressHandler sets the operation handler for the update host install progress operation
 	InstallerUpdateHostInstallProgressHandler installer.UpdateHostInstallProgressHandler
 	// InstallerUploadClusterIngressCertHandler sets the operation handler for the upload cluster ingress cert operation
@@ -424,14 +424,14 @@ func (o *AssistedInstallAPI) Validate() error {
 	if o.InstallerGetClusterHandler == nil {
 		unregistered = append(unregistered, "installer.GetClusterHandler")
 	}
-	if o.InstallerGetClusterIgnitionConfigHandler == nil {
-		unregistered = append(unregistered, "installer.GetClusterIgnitionConfigHandler")
-	}
 	if o.InstallerGetClusterInstallConfigHandler == nil {
 		unregistered = append(unregistered, "installer.GetClusterInstallConfigHandler")
 	}
 	if o.InstallerGetCredentialsHandler == nil {
 		unregistered = append(unregistered, "installer.GetCredentialsHandler")
+	}
+	if o.InstallerGetDiscoveryIgnitionHandler == nil {
+		unregistered = append(unregistered, "installer.GetDiscoveryIgnitionHandler")
 	}
 	if o.InstallerGetFreeAddressesHandler == nil {
 		unregistered = append(unregistered, "installer.GetFreeAddressesHandler")
@@ -481,11 +481,11 @@ func (o *AssistedInstallAPI) Validate() error {
 	if o.InstallerUpdateClusterHandler == nil {
 		unregistered = append(unregistered, "installer.UpdateClusterHandler")
 	}
-	if o.InstallerUpdateClusterIgnitionConfigHandler == nil {
-		unregistered = append(unregistered, "installer.UpdateClusterIgnitionConfigHandler")
-	}
 	if o.InstallerUpdateClusterInstallConfigHandler == nil {
 		unregistered = append(unregistered, "installer.UpdateClusterInstallConfigHandler")
+	}
+	if o.InstallerUpdateDiscoveryIgnitionHandler == nil {
+		unregistered = append(unregistered, "installer.UpdateDiscoveryIgnitionHandler")
 	}
 	if o.InstallerUpdateHostInstallProgressHandler == nil {
 		unregistered = append(unregistered, "installer.UpdateHostInstallProgressHandler")
@@ -656,15 +656,15 @@ func (o *AssistedInstallAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"]["/clusters/{cluster_id}/ignition-config"] = installer.NewGetClusterIgnitionConfig(o.context, o.InstallerGetClusterIgnitionConfigHandler)
-	if o.handlers["GET"] == nil {
-		o.handlers["GET"] = make(map[string]http.Handler)
-	}
 	o.handlers["GET"]["/clusters/{cluster_id}/install-config"] = installer.NewGetClusterInstallConfig(o.context, o.InstallerGetClusterInstallConfigHandler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/clusters/{cluster_id}/credentials"] = installer.NewGetCredentials(o.context, o.InstallerGetCredentialsHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/clusters/{cluster_id}/discovery-ignition"] = installer.NewGetDiscoveryIgnition(o.context, o.InstallerGetDiscoveryIgnitionHandler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
@@ -732,11 +732,11 @@ func (o *AssistedInstallAPI) initHandlerCache() {
 	if o.handlers["PATCH"] == nil {
 		o.handlers["PATCH"] = make(map[string]http.Handler)
 	}
-	o.handlers["PATCH"]["/clusters/{cluster_id}/ignition-config"] = installer.NewUpdateClusterIgnitionConfig(o.context, o.InstallerUpdateClusterIgnitionConfigHandler)
+	o.handlers["PATCH"]["/clusters/{cluster_id}/install-config"] = installer.NewUpdateClusterInstallConfig(o.context, o.InstallerUpdateClusterInstallConfigHandler)
 	if o.handlers["PATCH"] == nil {
 		o.handlers["PATCH"] = make(map[string]http.Handler)
 	}
-	o.handlers["PATCH"]["/clusters/{cluster_id}/install-config"] = installer.NewUpdateClusterInstallConfig(o.context, o.InstallerUpdateClusterInstallConfigHandler)
+	o.handlers["PATCH"]["/clusters/{cluster_id}/discovery-ignition"] = installer.NewUpdateDiscoveryIgnition(o.context, o.InstallerUpdateDiscoveryIgnitionHandler)
 	if o.handlers["PUT"] == nil {
 		o.handlers["PUT"] = make(map[string]http.Handler)
 	}
